src/test/deca/context/invalid/return/return_in_main_illegal.deca
// Description :
//    Utilisation d'une instruction return dans le bloc principal.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

{
    return 1;
}

